# AutomaticDifferentiation

./: .gitignore  AutomaticDifferentiation.sln  README.md  automatic_differentiation.ipynb
AutomaticDifferentiation/: AutomaticDifferentiation.cpp  AutomaticDifferentiation.vcxproj.filters  CMakeLists.txt
Source/: AutomaticDifferentiation.vcxproj
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
